<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2008 The Android Open Source Project
 * Copyright (c) 2017-2019 Roumen Petrov.  All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_new_window"
          android:icon="@drawable/ic_add_circle_outline_24dp"
          android:title="@string/new_window"
          app:showAsAction="always"/>
    <item android:id="@+id/menu_close_window"
          android:title="@string/close_window"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_toggle_soft_keyboard"
          android:title="@string/toggle_soft_keyboard"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_zoom_in"
          android:title="@string/zoom_in"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_zoom_out"
          android:title="@string/zoom_out"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_zoom_reset"
          android:title="@string/zoom_reset"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_clear_scrollback"
          android:title="@string/clear_scrollback"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_reset"
          android:title="@string/reset"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_exit"
          android:title="@string/exit"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_toggle_wakelock"
          android:title="@string/enable_wakelock"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_toggle_wifilock"
          android:title="@string/enable_wifilock"
          app:showAsAction="never"/>
</menu>
